# clapp

./: .gitignore  CITATION.cff  CLAPP.py  Dockerfile  LICENSE  README.md  clapp_legacy.py  classy_docs.md  dockrequirements.txt  environment.yaml  environment.yml  install_classy.sh  keys-IDs.json  longclapp-ag2-swarm.py  longclapp.py  longclappag2.py  minimal.py  minimal_blablador_test.py  minwo.py  models_config.json  multiclapp.py  myclapp.py  pyproject.toml  requirements.txt  test_classy.py
.devcontainer/: devcontainer.json
clapp/: app.py  config.py  langchain_compat.py  prompts.py
clapp/agents/: groupchat.py
clapp/examples/: example_prompts.json
clapp/execution/: code_execution.py
clapp/llms/: providers.py
clapp/rag/: ingest.py  ingest_formats.json  pipeline.py  store.py
clapp/services/: orchestrator.py
clapp/ui/: __init__.py  chat.py  greeting.py  (+2 more)
class-data/: Growth_with_w.py  check_PPF_approx.py  cl_ST.py  classy-current-docstrings.txt  classy-generated-docstrings.txt  classy-py.py  classy_docstrings.txt  cltt_terms.py  cosmology_validation.py  default_fast.ini  distances.py  explanatory.rst  explanatory.txt  many_times.py  neutrinohierarchy.py  one_k.py  one_time.py  test_hmcode.py  thermo.py  varying_neff.py  varying_pann.py  warmup.py
classy/: __init__.py
my_faiss_index/: index.faiss  index.pkl
notebooks/: OAI_CONFIG_LIST  OAI_CONFIG_LIST-oo  cosmology_validation copy.ipynb  cosmology_validation.ipynb  multiclapp-langchain.ipynb  test.ipynb  test_ag2.ipynb
prompts/: class_instructions.txt  class_refinement.txt  codeexecutor_instructions.txt  common_mistakes.txt  formatting_instructions.txt  preflight_instructions.txt  rating_instructions.txt  rating_instructions_ag2.txt  review_instructions.txt  typo_instructions.txt
scripts/: bash_docextract.sh  class_data_sources.json  refresh_class_data.py
test_apps/: minwoLLM.py
wheels/: classy-3.3.0-cp310-cp310-linux_x86_64.whl
(+5 files in other folders)
