[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "clapp-project" # You might want to change this to a more specific name
version = "0.1.0"
description = "A Streamlit application using LangChain and CLASS."
readme = "README.md"
requires-python = ">=3.10" # Specify your minimum Python version
license = "MIT" # Optional: Choose an appropriate license
# authors = [ # Optional: Add author information
#   { name="Your Name", email="your.email@example.com" },
# ]
# maintainers = [ # Optional: Add maintainer information
#   { name="Your Name", email="your.email@example.com" }
# ]
# keywords = ["streamlit", "langchain", "class", "cosmology", "ai"]
# classifiers = [
#     "Development Status :: 3 - Alpha",
#     "Intended Audience :: Developers",
#     "Intended Audience :: Science/Research",
#     "License :: OSI Approved :: MIT License",
#     "Programming Language :: Python :: 3",
#     "Programming Language :: Python :: 3.8",
#     "Programming Language :: Python :: 3.9",
#     "Programming Language :: Python :: 3.10",
#     "Programming Language :: Python :: 3.11",
#     "Topic :: Scientific/Engineering :: Astronomy",
#     "Topic :: Scientific/Engineering :: Artificial Intelligence",
# ]
dependencies = [
    "streamlit",
    "cryptography",
    "classy==3.3.0",
    "langchain-openai",
    "langchain-core",
    "langchain-community", # Provides FAISS, PyPDFLoader etc.
    "langchain", # Provides Memory, Callbacks etc.
    "langchain-text-splitters",
    "pydantic",
    "pyautogen", # Package for autogen
    "matplotlib",
    "Pillow", # Package for PIL
    "tiktoken",
    "faiss-cpu", # Required by langchain-community for FAISS
    "pypdf", # Required by langchain-community for PyPDFLoader
]

[tool.setuptools]
py-modules = ["CLAPP"]
